--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,12 +3,17 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
+p.small-para {
   font-size: 12px;
 }
 
 .para {
   font-size: 22px;
+}
+.button {
+  background-color: #ffc0cb;
+  color: black;
+  font-size: 20px;
 }
 
 .confirm {
@@ -18,13 +23,8 @@
   font-weight: bold;
 } 
 
-.button {
-  background-color: #ffc0cb;
-  color: black;
-  font-size: 20px;
-}
 
-.child {
+.text.child {
   color: red;
   font-size: 14px;
 }
